# wificidr

./: .gitignore  README.md
adv_c_linkedin/: ch1a.c  ch1b.c  ch2a.c  ch3a.c  ch3b.c  ch4a.c  ch4b.c  ch4c.c  ch5a.c  ch5b.c
code_wars/: camel.py  del.py  gray_code.py  lcm.py  rgb.py  s.py  stack.c  sum.py  sum2.py
daily/: day1.py  day14.py  day16.py  day18.py  day2.hs  (+21 more)
school/: Makefile  README.md  graph.ipynb  pyproject.toml
school/MATH200-Analytic-Geo/: Discussion3.ipynb  week7summary.ipynb
school/MATH210-Cal-II/: gcd_euc.py
school/MATH220-LinAlg/: Dockerfile
school/MATH227-Cal-III/: Week10.ipynb  Week12.ipynb  Week13.ipynb  Week4.ipynb  Week7.ipynb  Week_15_Frac.ipynb  surface_rev.ipynb  week3.ipynb  week5.ipynb  week6.ipynb  week9.ipynb  week9b.ipynb
school/MATH239/: Dockerfile  Final_project.ipynb  Week5.ipynb  Week6.ipynb  Week7.ipynb  packets.py
school/MATH239-Data-Presentation/: Final_project-Writeup.ipynb  Final_project.ipynb  Week3.ipynb  Week4.ipynb  pcap.csv
school/MATH239-Data-Presentation/final_project/: Final.Rmd  Final.html  FinalWriteUp.Rmd
school/MATH240-Diff-E/: 9.2_num1.ipynb  Project2.ipynb  Week2_slope_field.ipynb  Week3.ipynb  Week4_2.6.ipynb  Week4_HW.ipynb  Week4_forum.ipynb  Week5_forum.ipynb  project1_part1.ipynb  project1_part1.py  project1_part2.ipynb  project1_part2.py  scratch.ipynb  slope_field_generic.ipynb  week15_forum.ipynb  wk4forum.ipynb
school/MATH302-Statistics/: standard_deviation.ipynb  week3 forum.ipynb
school/MATH320-finite/finite/: uofa-admissions.Rmd  uofa-admissions.html  uofa-admissions.tex  week6.R
(+88 files in other folders)
