[tool.poetry]
name = "pcap"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
matplotlib = "^3.1.3"
jupyter = "^1.0.0"
seaborn = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
